# PlannerAgent

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_STUDY_GUIDE.md  PLAN_FIRST_THREE_STAGES.txt  README.md  SHA256SUMS  cards.json  deep-agents-ui-node20-linux-x86_64.tar.gz.part003  final_antifraud_report.md  full_insight_pipeline_clean.ipynb  history.json  hits.json  main_deepseek_test.py  main_e2e_branch_dialog.py  main_mvp_e2e_check.py  main_sandbox_code_example.py  main_ui_agent_server.py  model.py  pyproject.toml  run.py  run_ui.py  uko.json
.langgraph_api/: .langgraph_ops.pckl
adapters/: langgraph_agent_server.py
data/: README.md
deep_agent/: README.md  __init__.py  _request_log_config.py  agent.py  agent_graph_builder.py  agent_settings.py  agent_state.py  capabilities.py  gigachat_kitai_model.py  phoenix_tracing.py  requirements.txt  settings.py  state.py  subagents.py
deep_agent_test/: README.md  TEST_CASES.md  __init__.py  agent_specs.py  agent_state.py  analytics_deep_agent.py  calculate_reference_answers.py  execute_python_code_tool.py  prompts.py  python_sandbox.py  requirements.txt  run_native_analytics_chat.py  run_test_basket.py  settings.py  skills_context_middleware.py  sync_test_queries.py  test_basket.json  tool_output_file_middleware.py
deep_agent_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: agent_architecture.md  agent_data_structure.md  middleware_map.md  request_lifecycle.md
evals/: README.md
examples/: README.md  branch_from_graph_step_demo.py  chat_run.py  fake_spark_tools.py
local_ui/: .env  (+9 more)
(+488 files in other folders)
