[project]
name = "deep-agent"
version = "0.1.0"
description = "Аналитический DeepAgent с инструментами чтения данных, skills и sandbox."
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.11",
  "langchain>=1.3.10",
  "langchain-core>=1.4.8",
  "langchain-mcp-adapters>=0.1.0",
  "langgraph>=1.2.6",
  "pydantic>=2.7.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
kitai = [
  "sber-kitai-sdk-langchain",
  "sber-kitai-sdk-py",
]
data = [
  "pyspark>=3.5.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
]
analytics = [
  "matplotlib>=3.8.0",
  "plotly>=5.20.0",
  "scipy>=1.11.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.4.0",
]
ui = [
  "langgraph-cli[inmem]>=0.4.27,<0.5",
]

[tool.setuptools.packages.find]
include = ["deep_agent*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
